method E-mcf was added - intermediaries nodes is used now

--- a/python/CheckSolution-Paper.ipynb
+++ b/python/CheckSolution-Paper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,17 +13,7 @@
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
@@ -31,61 +21,11 @@
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
       "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
       "Tree: True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 5\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 4\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
@@ -105,33 +45,7 @@
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
@@ -139,83 +53,7 @@
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 4\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 4\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "Connect: True\n",
-      "non-leaf(degre=1): False(0)\n",
-      "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
@@ -223,68 +61,351 @@
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 4\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 4\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 2\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 4\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n",
-      "Tree: False\n",
-      "Trees: 3\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
-      "\tGraph : True\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
+      "Connect: True\n",
+      "non-leaf(degre=1): False(0)\n",
+      "\n",
+      "Tree: True\n",
       "Connect: True\n",
       "non-leaf(degre=1): False(0)\n",
       "\n"
@@ -318,7 +439,7 @@
     "    print ()\n",
     "    \n",
     "\n",
-    "with open('saida.txt') as f:\n",
+    "with open('../saida') as f:\n",
     "    sources = []\n",
     "    edges = []\n",
     "    members = []\n",
